# the-convergence

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  SDK_MIGRATION.md  SDK_USAGE.md  SECURITY.md  TROUBLESHOOTING.md  USE_CASES.md  YAML_CONFIGURATION_REFERENCE.md  llms.txt  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: project.md
.github/workflows/: ci.yaml  publish.yaml  publish.yml  test-examples.yml
_meta/: ARCHITECTURE-ENHANCEMENTS.md  CONVERGENCE-MEMO.md  ENTERPRISE-AGENT-SAFETY-SUMMARY.md  HANDOFF-ENHANCEMENTS.md
_meta/.obsidian/: workspace.json
_meta/agentdb/: agent.db  agent.db-shm
_meta/agents/: .current  main-14557-snapshot.md  main-25650-snapshot.md  main-25650.json  main-27344.json  main-40201-snapshot.md  main-40201.json  main-48711.json  main-57307.json  main-68488-snapshot.md  main-68488.json  main-80688.json  main-81079-snapshot.md  main-81079.json  main-85212.json  main-86509-snapshot.md  main-86509.json  main-89261-snapshot.md  main-89261.json  main-98216.json
_meta/context/: SCOUT_REPORT_20260324.md  active.md
_meta/docs/: RLP-SAO-DEEP-DIVE.md
_meta/dreams/: entropy-substrate.md  simulation-harness.md  the-unification.md
_meta/handoffs/: collabvault-review-2026-03-08.md  dashboard-deferred-handoff.md  implementation-ready-20260312.md  learning-system-2026-03-12.md  pattern-system-handoff.md
_meta/plans/: ARCHITECTURE-v3-RESEARCH-INFORMED.md  IMPLEMENTATION-CONTRACTS.md  UNIFIED-IMPLEMENTATION-PLAN.md  pattern-system-v2.md
_meta/research/: CODEBASE-READINESS-ASSESSMENT.md  DASHBOARD-HITL-SUMMARY.md  DASHBOARD-QUICK-START.md  KNOWLEDGE-RETRIEVAL-SUMMARY.md  OBSERVABILITY-SUMMARY.md  PATTERN-FRAGILITY-IMPLEMENTATION.md  PATTERN-FRAGILITY-SUMMARY.md  README-DASHBOARD-HITL.md  README-PATTERN-FRAGILITY.md  SAFETY-GUARDRAILS-SUMMARY.md  SELF-LEARNING-SUMMARY.md  collabvault-learnings.md  context-graphs-architecture.md  dashboard-hitl-research.md  enterprise-agent-foundations.md  funjoin-failure-patterns.md  funjoin-integration-needs.md  knowledge-retrieval-2026.md  mypy-legacy-codebases-research.md  novel-approaches-2026.md  observability-patterns.md  optional-imports-mypy.md  pattern-fragility.md  regex-alternatives.md  safety-guardrails-research.md  self-learning-production-readiness.md
_meta/review/: ADVERSARY-FINDINGS-SUMMARY.txt  P1-001-adversary-review.md  P2-001-adversary-review.md
_meta/reviews/: architecture-v3-teardown.md  pattern-system-teardown.md
armature/: __init__.py  sdk.py
armature/cache/: __init__.py  backends.py  semantic.py
armature/cli/: __init__.py  main.py
armature/clients/: __init__.py  claude.py
armature/core/: __init__.py  config.py  env_loader.py  llm_provider.py  protocols.py  registry.py  runtime.py  weave_logger.py
armature/evaluators/: README.md  __init__.py  base.py  json_structure.py
armature/generator/: __init__.py  ai_powered_setup.py  async_generation_utils.py  constants.py  custom_template_generator.py  init_orchestrator.py  interactive_setup.py  natural_language_processor.py  preset_templates.py
armature/knowledge/: __init__.py  graph.py  schema.py  storage.py
armature/legacy/: __init__.py  models.py  store.py  trackers.py
armature/optimization/: api_caller.py  config_loader.py  config_validator.py  evaluator.py  evolution.py  models.py  response_utils.py  rl_optimizer.py  runner.py  test_case_evolution.py
armature/plugins/: __init__.py
armature/runtime/: bayesian_update.py  evolution.py  online.py  reward_evaluator.py
armature/storage/: README.md  __init__.py  base.py  convex.py  file.py  legacy_manager.py  memory.py  multi_backend.py  postgres.py  postgresql.py  registry.py  rl_models.py  runtime_protocol.py  sqlite.py
armature/types/: __init__.py  config.py  evaluator.py  response.py  results.py  runtime.py
convergence/: __init__.py  sdk.py
convergence/cache/: __init__.py  backends.py  semantic.py
convergence/cli/: main.py
convergence/clients/: __init__.py  claude.py
convergence/core/: __init__.py  config.py  env_loader.py  llm_provider.py  protocols.py  registry.py  runtime.py  weave_logger.py
convergence/evaluators/: __init__.py  code_quality.py  confidence.py  text_quality.py
convergence/generator/: ai_powered_setup.py  custom_template_generator.py  init_orchestrator.py  interactive_setup.py  natural_language_processor.py  (+2 more)
docs/: INTEGRATION.md  OBSERVABILITY.md  QUICKSTART.md  SAFETY.md  SELF-LEARNING.md
examples/: BEST_PRACTICES.md  README.md  STYLE_GUIDE.md  __init__.py  basic_agent.py  observable_agent.py  safe_agent.py
tests/: __init__.py  conftest.py
(+212 files in other folders)
