[project]
name = "the-convergence"
version = "1.0.0"
description = "Self-evolving agent framework powered by reinforcement learning, evolutionary algorithms, and self-improving policies"
authors = [
    {name = "Aria Han", email = "ariaxhan@gmail.com"},
    {name = "Shreyash Hamal"},
    {name = "Myat Pyae Paing"},
]
maintainers = [
    {name = "Aria Han", email = "ariaxhan@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = [
    "reinforcement-learning",
    "self-evolving",
    "agents",
    "evolutionary-algorithms",
    "thompson-sampling",
    "multi-armed-bandits",
    "rlhf",
    "self-improvement",
    "llm-agents",
    "agentic-ai",
    "machine-learning",
    "bayesian-optimization"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    # Core framework
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "diagrams",
    
    # Optimization engine
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # Storage
    "aiosqlite>=0.19.0",
    "aiofiles>=23.0.0",
    
    # Logging
    "weave>=0.50.0",
    
    # LLM Provider (for RLP/SAO)
    "litellm>=1.0.0",
    
    # Environment management
    "python-dotenv>=1.0.0",
    
    # Plugin system
    "pluggy>=1.3.0",
]

[project.optional-dependencies]
# Full agent society features (RLP + SAO)
agents = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "trl>=0.8.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "litellm>=1.0.0",
]

# Advanced LLM features
llm = [
    "langgraph>=0.0.1",
    "litellm>=1.0.0",
]

# Reddit agent support (Async PRAW for async environment)
reddit = [
    "asyncpraw>=7.8.0",
    "agno>=2.1.8",
]

# All features
all = [
    "the-convergence[agents,llm,reddit]",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
convergence = "convergence.cli.main:app"

[project.urls]
Homepage = "https://github.com/ariaxhan/the-convergence"
Documentation = "https://github.com/ariaxhan/the-convergence#readme"
Repository = "https://github.com/ariaxhan/the-convergence"
Changelog = "https://github.com/ariaxhan/the-convergence/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["convergence*", "examples*"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "convergence/generator/templates/*.py",  # Code generation templates with placeholders
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
# Exclude template files (contain placeholders, not valid Python)
exclude = [
    "convergence/generator/templates/",
]

# Ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = ["yaml", "aiofiles", "aiofiles.*"]
ignore_missing_imports = true

# Legacy modules with pre-existing type errors
# These have actual type issues (not just missing annotations)
# TODO: Fix incrementally and remove from this list
[[tool.mypy.overrides]]
module = [
    "convergence.cli.main",
    "convergence.core.registry",
    "convergence.evaluators.code_quality",
    "convergence.evaluators.json_structure",
    "convergence.generator.*",
    "convergence.legacy.*",
    "convergence.optimization.*",
    "convergence.plugins.learning.rlp",
    "convergence.runtime.online",
    "convergence.sdk",
    "convergence.storage.convex",
    "convergence.storage.legacy_manager",
    "convergence.storage.multi_backend",
    "convergence.storage.runtime_stub",
    "convergence.storage.sqlite",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
